SDCICD-116. Add 4.3.0rc fresh install test to stage for osde2e.
There's now a 4.3.0rc fresh install pipeline in stage for osde2e.

--- a/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
+++ b/ci-operator/config/openshift/osde2e/openshift-osde2e-master.yaml
@@ -95,6 +95,28 @@ tests:
 
     ci/prow_run_tests.sh /usr/local/osde2e-secrets
 
+- as: e2e-stage-4.3
+  artifact_dir: /tmp/artifacts
+  cron: '* */4 * * *'
+  secret:
+    name: osde2e-secrets
+    mount_path: /usr/local/osde2e-secrets
+  container:
+    from: src
+  commands: |
+    set -o pipefail
+
+    export HOME=$(mktemp -d)
+
+    export REPORT_DIR=/tmp/artifacts
+    export DESTROY_CLUSTER=false
+
+    export OSD_ENV=stage
+    export MAJOR_TARGET=4
+    export MINOR_TARGET=3
+
+    ci/prow_run_tests.sh /usr/local/osde2e-secrets
+
 # --- Production
 - as: e2e-prod-4.2
   artifact_dir: /tmp/artifacts
