add heimdall-dockercfg as a mirrored secret

--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -264,3 +264,15 @@ secrets:
   to:
     namespace: ci
     name: openshift-cnv-dev-cnv-bot-pull-secret
+- from:
+    namespace: heimdall-secrets
+    name: heimdall-dockercfg
+  to:
+    namespace: ci
+    name: heimdall-dockercfg
+- from:
+    namespace: heimdall-secrets
+    name: heimdall-dockercfg
+  to:
+    namespace: ci-stg
+    name: heimdall-dockercfg
