enable openshift-kni/cnf-features-deploy repo
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -640,6 +640,7 @@ tide:
     - operator-framework/presto
     - openshift/file-integrity-operator
     - openshift-kni/performance-addon-operators
+    - openshift-kni/cnf-features-deploy
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -900,6 +901,7 @@ tide:
     - operator-framework/presto
     - openshift/file-integrity-operator
     - openshift-kni/performance-addon-operators
+    - openshift-kni/cnf-features-deploy
   - labels:
     - lgtm
     - approved
