--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -101,6 +101,9 @@ approve:
   - openshift-kni/performance-addon-operators
   require_self_approval: false
 - repos:
+  - openshift-kni/cnf-features-deploy
+  require_self_approval: false
+- repos:
   - openshift/cluster-csi-snapshot-controller-operator
   require_self_approval: false
 blunderbuss:
@@ -1093,6 +1096,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  openshift-kni/cnf-features-deploy:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   openshift-kni/performance-addon-operators:
   - endpoint: http://refresh
     events:
@@ -1239,6 +1257,9 @@ lgtm:
   review_acts_as_lgtm: true
 - repos:
   - openshift-kni/performance-addon-operators
+  review_acts_as_lgtm: true
+- repos:
+  - openshift-kni/cnf-features-deploy
   review_acts_as_lgtm: true
 - repos:
   - openshift/cluster-csi-snapshot-controller-operator
@@ -1743,6 +1764,34 @@ plugins:
   - lgtm
   - shrug
   - trigger
+  openshift-kni/cnf-features-deploy:
+  - assign
+  - blunderbuss
+  - blockade
+  - bugzilla
+  - cat
+  - dog
+  - heart
+  - golint
+  - goose
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - pony
+  - retitle
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - owners-label
+  - wip
+  - yuks
+  - approve
   openshift-kni/performance-addon-operators:
   - assign
   - blunderbuss
