mount integreatly secrets for heimdall e2e

--- a/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
@@ -56,6 +56,9 @@ presubmits:
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
+        - mountPath: /usr/local/integr8ly-vi-secrets
+          name: integr8ly-ci-secrets
+          readOnly: true
       serviceAccountName: ci-operator
       volumes:
       - name: cluster-profile
@@ -69,6 +72,9 @@ presubmits:
       - name: sentry-dsn
         secret:
           secretName: sentry-dsn
+      - name: integr8ly-ci-secrets
+        secret:
+          secretName: integr8ly-ci-secrets
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
     always_run: true
