--- a/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
@@ -24,6 +24,7 @@ presubmits:
         - --repo=heimdall
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-cluster-profile
+        - --secret-dir=/usr/local/integr8ly-ci-secrets
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e
         - --template=/usr/local/e2e
@@ -56,7 +57,7 @@ presubmits:
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
-        - mountPath: /usr/local/integr8ly-vi-secrets
+        - mountPath: /usr/local/integr8ly-ci-secrets
           name: integr8ly-ci-secrets
           readOnly: true
       serviceAccountName: ci-operator
