path -> mount_path

--- a/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
+++ b/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
@@ -61,6 +61,6 @@ tests:
   commands: make test/e2e
   secret:
     name: integr8ly-ci-secrets
-    path: /usr/local/integr8ly-ci-secrets
+    mount_path: /usr/local/integr8ly-ci-secrets
   openshift_installer_src:
     cluster_profile: aws
