--- a/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
@@ -23,8 +23,8 @@ presubmits:
         - --org=integr8ly
         - --repo=heimdall
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --secret-dir=/usr/local/integr8ly-secrets
         - --secret-dir=/usr/local/e2e-cluster-profile
+        - --secret-dir=/usr/local/integr8ly-ci-secrets
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e
         - --template=/usr/local/e2e
@@ -51,8 +51,8 @@ presubmits:
         volumeMounts:
         - mountPath: /usr/local/e2e-cluster-profile
           name: cluster-profile
-        - mountPath: /usr/local/integr8ly-secrets
-          name: integreatly-ci-secrets
+        - mountPath: /usr/local/integr8ly-ci-secrets
+          name: integr8ly-ci-secrets
           readOnly: true
         - mountPath: /usr/local/e2e
           name: job-definition
@@ -69,7 +69,7 @@ presubmits:
               name: cluster-secrets-aws
       - name: integr8ly-ci-secrets
         secret:
-          secretName: integreatly-ci-secrets
+          secretName: integr8ly-ci-secrets
       - configMap:
           name: prow-job-cluster-launch-installer-src
         name: job-definition
