--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -555,7 +555,7 @@ periodics:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
         export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
         export MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
-        mv /tmp/artifacts/* /logs/
+        mv ${ARTIFACTS}/custom-prow-metadata.json ${ARTIFACTS}/metadata.json;
       command:
       - /bin/bash
       - -c
