ci-tools: build private-org-sync image

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -203,6 +203,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/group-auto-updater
   to: group-auto-updater
+- context_dir: images/private-org-sync/
+  from: git
+  inputs:
+    bin:
+      paths:
+        - destination_dir: .
+          source_path: /go/bin/private-org-sync
+  to: private-org-sync
 promotion:
   namespace: ci
   tag: latest
