make release upgrade job names more explicit

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
@@ -577,7 +577,7 @@ periodics:
     job-release: "4.1"
     job-test: e2e
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.1-to-nightly
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.1-stable-to-4.1-nightly
   spec:
     containers:
     - command:
