--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.2-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.2-periodics.yaml
@@ -1949,7 +1949,7 @@ periodics:
     job-release: "4.2"
     job-test: e2e
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.2-to-nightly
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.2-stable-to-4.2-nightly
   spec:
     containers:
     - command:
@@ -2556,7 +2556,7 @@ periodics:
     job-test: e2e
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.1-to-4.2
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.1-stable-to-4.2-ci
   spec:
     containers:
     - command:
