--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -4117,7 +4117,7 @@ periodics:
     job-test: e2e
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-to-4.4
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-stable-to-4.4-ci
   spec:
     containers:
     - command:
@@ -4210,7 +4210,7 @@ periodics:
     job-test: e2e
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-nightly-to-4.4
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-nightly-to-4.4-nightly
   spec:
     containers:
     - command:
