--- a/core-services/release-controller/_releases/release-ocp-4.4.json
+++ b/core-services/release-controller/_releases/release-ocp-4.4.json
@@ -18,10 +18,12 @@
   },
   "verify":{
     "aws":{
-      "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-4.4"}
+      "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-4.4"},
+      "maxRetries": 3
     },
     "aws-serial":{
-      "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-serial-4.4"}
+      "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-serial-4.4"},
+      "maxRetries": 3
     },
     "azure":{
       "optional":true,
