--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
@@ -22,7 +22,7 @@ periodics:
         valueFrom:
           configMapKeyRef:
             key: openshift-hypershift-toolkit-release-4.3-ibm.yaml
-            name: ci-operator-master-configs
+            name: ci-operator-4.3-configs
       - name: OPENSHIFT_BUILD_NAMESPACE
         valueFrom:
           fieldRef:
