--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -4127,48 +4127,36 @@ periodics:
     job-test: e2e
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
     release.openshift.io/verify: "true"
-  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-nightly-to-4.4-nightly
+  name: release-openshift-origin-installer-e2e-aws-upgrade-4.3-stable-to-4.4-nightly
   spec:
     containers:
     - command:
       - /bin/bash
       - -c
-      - |
-        #!/bin/bash
-        set -euo pipefail
-
-        initial=$(ARTIFACTS)/release-initial.json
-        latest=$(ARTIFACTS)/release-latest.json
-        if ! curl -G https://openshift-release.svc.ci.openshift.org/api/v1/releasestream/4.3.0-0.nightly/latest > ${initial}; then
-          echo "error: Could not find a 4.3 nightly version"
-          exit 1
-        fi
-        if ! curl -G https://openshift-release.svc.ci.openshift.org/api/v1/releasestream/4.4.0-0.nightly/latest > ${latest}; then
-          echo "error: Could not find a 4.4 nightly version"
-          exit 1
-        fi
-
-        from=$( python -c 'import json,sys; print json.load(open(sys.argv[1], "r"))["name"]' "${initial}" )
-        to=$( python -c 'import json,sys; print json.load(open(sys.argv[1], "r"))["name"]' "${latest}" )
-        export RELEASE_IMAGE_INITIAL=$( python -c 'import json,sys; print json.load(open(sys.argv[1], "r"))["pullSpec"]' "${initial}" )
-        export RELEASE_IMAGE_LATEST=$( python -c 'import json,sys; print json.load(open(sys.argv[1], "r"))["pullSpec"]' "${latest}" )
-
-        # prow doesn't allow init containers or a second container
-        export PATH=$PATH:/tmp/bin
-        mkdir /tmp/bin
-        curl https://storage.googleapis.com/origin-ci-test/_tools/4.1.0/oc >/tmp/bin/oc 2>/dev/null
-        chmod ug+x /tmp/bin/oc
-
-        # annotate the information about this job so that the release controller adds it to the upgrade graph
-        oc annotate pj/${PROW_JOB_ID} "release.openshift.io/from-tag=${from}" "release.openshift.io/tag=${to}" "release.openshift.io/source=ocp/$(BRANCH)"
-
-        ci-operator --artifact-dir=$(ARTIFACTS) \
-          --lease-server=http://boskos \
-          --secret-dir=/usr/local/pull-secret --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile \
-          --target=e2e-$(CLUSTER_TYPE)-upgrade --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME)
+      - "#!/bin/bash\nset -euo pipefail\n\ninitial=$(ARTIFACTS)/release-initial.json\nlatest=$(ARTIFACTS)/release-latest.json\nif
+        ! curl --fail -X GET -G https://openshift-release.svc.ci.openshift.org/api/v1/releasestream/4-stable/latest
+        --data-urlencode 'in=>4.3.0-0 <4.4.0-0' > ${initial}; then\n  echo \"error:
+        Could not find a stable version\"\n  exit 1\nfi\nif ! curl --fail -X GET -G
+        https://openshift-release.svc.ci.openshift.org/api/v1/releasestream/4.4.0-0.nightly/latest
+        > ${latest}; then\n  echo \"error: Could not find newest version\"\n  exit
+        1\nfi\n\nfrom=$( python -c 'import json,sys; print json.load(open(sys.argv[1],
+        \"r\"))[\"name\"]' \"${initial}\" )\nto=$( python -c 'import json,sys; print
+        json.load(open(sys.argv[1], \"r\"))[\"name\"]' \"${latest}\" )\nexport RELEASE_IMAGE_INITIAL=$(
+        python -c 'import json,sys; print json.load(open(sys.argv[1], \"r\"))[\"pullSpec\"]'
+        \"${initial}\" )\nexport RELEASE_IMAGE_LATEST=$( python -c 'import json,sys;
+        print json.load(open(sys.argv[1], \"r\"))[\"pullSpec\"]' \"${latest}\" )\n\n#
+        prow doesn't allow init containers or a second container\nexport PATH=$PATH:/tmp/bin\nmkdir
+        /tmp/bin\ncurl https://mirror.openshift.com/pub/openshift-v4/clients/ocp-dev-preview/4.3.0-0.nightly-2019-11-13-233341/openshift-client-linux-4.3.0-0.nightly-2019-11-13-233341.tar.gz
+        | tar xvzf - -C /tmp/bin/        \nchmod ug+x /tmp/bin/oc\n\n# annotate the
+        information about this job so that the release controller adds it to the upgrade
+        graph\noc annotate pj/${PROW_JOB_ID} \"release.openshift.io/from-tag=${from}\"
+        \"release.openshift.io/tag=${to}\" \"release.openshift.io/source=ocp/$(BRANCH)\"\n\nci-operator
+        --artifact-dir=$(ARTIFACTS) --lease-server=http://boskos\\\n  --secret-dir=/usr/local/pull-secret
+        --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile \\\n  --target=e2e-$(CLUSTER_TYPE)-upgrade
+        --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME)\n"
       env:
       - name: BRANCH
-        value: "4.4"
+        value: "4.3"
       - name: CLUSTER_TYPE
         value: aws
       - name: CONFIG_SPEC
