--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3-periodics.yaml
@@ -2,7 +2,7 @@ periodics:
 - agent: kubernetes
   decorate: true
   interval: 24h
-  name: periodic-ibmcloud-cluster-create
+  name: pull-ci-openshift-hypershift-toolkit-release-iks-4.3-create-cluster
   spec:
     containers:
     - args:
@@ -21,7 +21,7 @@ periodics:
       - name: CONFIG_SPEC
         valueFrom:
           configMapKeyRef:
-            key: openshift-hypershift-toolkit-release-4.3-ibm.yaml
+            key: openshift-hypershift-toolkit-release-iks-4.3.yaml
             name: ci-operator-misc-configs
       - name: OPENSHIFT_BUILD_NAMESPACE
         valueFrom:
