--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3.yaml
@@ -8,7 +8,7 @@ tests:
     container:
       from: root
     secret:
-      name: 'gate-secrets'
+      name: 'ibm-gate-test-secrets'
       mount_path: ''
 
 resources:
