--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-iks-4.3-presubmits.yaml
@@ -41,16 +41,16 @@ presubmits:
             cpu: 10m
         volumeMounts:
         - mountPath: ""
-          name: gate-secrets
+          name: ibm-gate-test-secrets
           readOnly: true
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
       serviceAccountName: ci-operator
       volumes:
-      - name: gate-secrets
+      - name: ibm-gate-test-secrets
         secret:
-          secretName: gate-secrets
+          secretName: ibm-gate-test-secrets
       - name: sentry-dsn
         secret:
           secretName: sentry-dsn
