Fix DNS-1123 label to conform to the standard
This fixes the following error:
Invalid value: \"openstackAuth\": a DNS-1123 label must consist of lower case alphanumeric characters or '-', and must start and end with an alphanumeric character (e.g. 'my-name',  or '123-abc', regex used for validation is '[a-z0-9]([-a-z0-9]*[a-z0-9])?'

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -14,9 +14,9 @@ items:
       app: prow
       component: sshd
     ports:
-    - name: openstackAuth
+    - name: openstack-auth
       port: 5000
-      targetPort: openstackAuth
+      targetPort: openstack-auth
     - name: api
       port: 6443
       targetPort: api
@@ -61,7 +61,7 @@ items:
           ports:
             - name: ssh
               containerPort: 2222
-            - name: openstackAuth
+            - name: openstack-auth
               containerPort: 5000
             - name: api
               containerPort: 6443
