--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-postsubmits.yaml
@@ -20,7 +20,7 @@ postsubmits:
         - --org=openshift
         - --repo=hypershift-toolkit
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --secret-dir=
+        - --secret-dir=/etc/ibm-gate-test-secrets/
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=create-cluster
         command:
@@ -38,7 +38,7 @@ postsubmits:
           requests:
             cpu: 10m
         volumeMounts:
-        - mountPath: ""
+        - mountPath: /etc/ibm-gate-test-secrets
           name: ibm-gate-test-secrets
           readOnly: true
         - mountPath: /etc/sentry-dsn
