add new template for kubevirt tests requiring nested-virtualization

--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -57,8 +57,8 @@ presubmits:
     decorate: true
     decoration_config:
       skip_cloning: true
+      timeout: 7h0m0s
     labels:
-      ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-kubevirt-kubevirt-master-kubevirt-e2e-test
     path_alias: kubevirt.io/kubevirt
@@ -81,7 +81,7 @@ presubmits:
         - ci-operator
         env:
         - name: CLUSTER_TYPE
-          value: gcp
+          value: aws
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
@@ -90,58 +90,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: kubevirt-e2e-test
         - name: TEST_COMMAND
-          value: |2
-
-            set -euo pipefail
-
-            echo "fetching oc and kubectl for deployment"
-            export oc_filename='oc.tar.gz'
-            export oc_dirname="${oc_filename%.tar.gz}"
-            export oc_download_url_base='https://mirror.openshift.com/pub/openshift-v4/clients/oc/4.2/linux/'
-            (
-              mkdir ${oc_dirname}
-              cd ${oc_dirname}
-              curl -L -O -o ${oc_filename} ${oc_download_url_base}/${oc_filename}
-              tar zxvf ${oc_filename}
-              ln -s $(pwd)/${oc_dirname} kubectl
-            ) || ( echo "failed to download ${oc_filename}"; exit 1 )
-            export PATH=$(pwd)/${oc_dirname}:$PATH
-            which kubectl
-            which oc
-
-            echo "checking nodes for cluster"
-            oc get nodes
-
-            echo "checking configuration"
-            env|grep KUBE
-            kubectl config view
-
-            export DOCKER_PREFIX='dhiller'
-            export DOCKER_TAG="latest"
-            export KUBEVIRT_PROVIDER=external
-
-            export GIMME_GO_VERSION=1.12.8
-            export GOPATH="/go"
-            export GOBIN="/usr/bin"
-            source /etc/profile.d/gimme.sh
-
-            echo "checking configuration location"
-            echo "KUBECONFIG: ${KUBECONFIG}"
-
-            echo "calling cluster-up to prepare config and check whether cluster is reachable"
-            bash -x ./cluster-up/up.sh
-
-            echo "checking cluster configuration after config prep"
-            kubectl config view
-
-            echo "deploying"
-            bash -x ./hack/cluster-deploy.sh
-
-            echo "checking pods for kubevirt"
-            oc get pods -n kubevirt
-
-            echo "testing"
-            bash -x ./hack/functests.sh
+          value: run-tests
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -153,7 +102,7 @@ presubmits:
           name: cluster-profile
         - mountPath: /usr/local/kubevirt-e2e-test
           name: job-definition
-          subPath: cluster-launch-installer-src.yaml
+          subPath: cluster-launch-installer-nested-virt-tests.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -167,7 +116,7 @@ presubmits:
           - configMap:
               name: cluster-profile-gcp
       - configMap:
-          name: prow-job-cluster-launch-installer-src
+          name: prow-job-cluster-launch-installer-nested-virt-tests
         name: job-definition
       - name: sentry-dsn
         secret:
