--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -388,7 +388,9 @@ periodics:
     workdir: true
   interval: 2h
   labels:
+    ci.openshift.io/release-type: informing
     job-release: "4.4"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: promote-release-openshift-okd-machine-os-content-e2e-aws-4.4
   spec:
     containers:
@@ -456,11 +458,11 @@ periodics:
         # compare the latest image we have built against the potential candidate
         latest="$( oc get istag -n fcos ${TAG}:${BRANCH} --template '{{ index .image.dockerImageMetadata.Config.Labels "version" }} {{ index .image.dockerImageMetadata.Config.Labels "id-artifacts" }} {{ index .image.dockerImageMetadata.Config.Labels "id-machine-config-operator-rpms" }}' )"
         candidate="${build_id} ${origin_artifacts_id} ${origin_machine_config_operator_rpms_id}"
-        echo "Comparing existing '$latest' against latest '$candidate'"
-        if [[ "${latest}" == "${candidate}" ]]; then
-          echo "No build necessary, content is up to date"
-          exit 0
-        fi
+        # echo "Comparing existing '$latest' against latest '$candidate'"
+        # if [[ "${latest}" == "${candidate}" ]]; then
+        #   echo "No build necessary, content is up to date"
+        #   exit 0
+        # fi
 
         curl -L https://github.com/mikefarah/yq/releases/download/2.4.0/yq_linux_amd64 2>/dev/null >/tmp/bin/yq
         chmod ug+x $HOME/bin/yq
@@ -512,17 +514,22 @@ periodics:
               RUN set -xeuo pipefail && \\
                   mkdir -p /srv/repo /tmp/working && \\
                   curl -L "${tar_url}" | tar xf - -C /srv/repo/ && \\
-                  cp /etc/yum.repos.d/fedora-updates-testing-modular.repo /tmp && \\
-                  rm -rf /etc/yum.repos.d/* && \\
-                  cp /tmp/fedora-updates-testing-modular.repo /etc/yum.repos.d/ && \\
+                  rm -rf /etc/yum.repos.d && \\
+                  ostree --repo=/srv/repo checkout "${ostree_ref}" --subpath /usr/etc/yum.repos.d --user-mode /etc/yum.repos.d && \\
                   sed -i 's/enabled=0/enabled=1/g' /etc/yum.repos.d/fedora-updates-testing-modular.repo && \\
                   rpm-ostree db list --repo /srv/repo "${ostree_ref}" > /tmp/packages && \\
                   dnf module enable -y cri-o:1.16 && \\
                   if ! grep -q cri-o /tmp/packages; then yumdownloader -y --disablerepo=* --enablerepo=updates-testing-modular --destdir=/tmp/rpms cri-o cri-tools; fi && \\
-                  curl http://base-${BRANCH//\./-}-rhel8.ocp.svc > /etc/yum.repos.d/rhel8.repo && \\
-                  if ! grep -q glusterfs-fuse /tmp/packages; then yumdownloader -y --disablerepo=* --enablerepo=rhel-8* --destdir=/tmp/rpms glusterfs glusterfs-client-xlators glusterfs-fuse glusterfs-libs psmisc; fi && \\
+                  if ! grep -q glusterfs-fuse /tmp/packages; then yumdownloader -y --disablerepo=* --enablerepo=fedora --enablerepo=updates --destdir=/tmp/rpms --arch=x86_64 glusterfs glusterfs-client-xlators glusterfs-fuse glusterfs-libs psmisc; fi && \\
                   cd /tmp/working && \\
                   for i in \$(find /tmp/rpms/ -name *.rpm); do echo "Extracting \$i ..."; rpm2cpio \$i | cpio -div; done && \\
+                  mkdir -p etc/alternatives && \\
+                  ln -s /usr/sbin/iptables-nft etc/alternatives/iptables && \\
+                  ln -s /usr/sbin/iptables-nft-restore etc/alternatives/iptables-restore && \\
+                  ln -s /usr/sbin/iptables-nft-save etc/alternatives/iptables-save && \\
+                  ln -s /usr/sbin/ip6tables-nft etc/alternatives/ip6tables && \\
+                  ln -s /usr/sbin/ip6tables-nft-restore etc/alternatives/ip6tables-restore && \\
+                  ln -s /usr/sbin/ip6tables-nft-save etc/alternatives/ip6tables-save && \\
                   mv etc usr/ && mv sbin/* usr/sbin/ && rm -rf sbin/ && \\
                   coreos-assembler dev-overlay --repo /srv/repo --rev "${ostree_ref}" --add-tree /tmp/working --output-ref "${ostree_ref}"
 
@@ -542,10 +549,30 @@ periodics:
         oc -n ${namespace} create is machine-os-content >/dev/null
         build ${dir}/build.yaml machine-os-content
 
+        # Craft a release image
+        set -x
+        MOC_SHA256=$(oc get -n "${namespace}" istag/machine-os-content:latest -o template='{{ .image.metadata.name }}' )
+        export RELEASE_IMAGE_LATEST=registry.svc.ci.openshift.org/${namespace}/release:latest
+        oc registry login
+        oc adm release new -n origin \
+          --from-image-stream=$(BRANCH) \
+          --to-image=${RELEASE_IMAGE_LATEST} \
+          machine-os-content=registry.svc.ci.openshift.org/${namespace}/machine-os-content@${MOC_SHA256}
+        # execute the test
+        export RELEASE_IMAGE_INITIAL=${RELEASE_IMAGE_LATEST}
+        ci-operator \
+          --artifact-dir=$(ARTIFACTS) \
+          --secret-dir=/usr/local/pull-secret \
+          --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-cluster-profile \
+          --template=/usr/local/e2e-aws \
+          --target=e2e-$(CLUSTER_TYPE) \
+          --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
+          --lease-server=http://boskos
+
         # debug output
         oc describe -n ${namespace} istag/machine-os-content:latest
-        oc tag ${namespace}/machine-os-content:latest fcos/machine-os-content:${BRANCH}
-        oc tag fcos/machine-os-content:${BRANCH} ${TAG_NS}/${BRANCH}:machine-os-content
+        # oc tag ${namespace}/machine-os-content:latest fcos/machine-os-content:${BRANCH}
+        # oc tag fcos/machine-os-content:${BRANCH} ${TAG_NS}/${BRANCH}:machine-os-content
       env:
       - name: TAG_NS
         value: origin
