incorrect release stream

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -255,7 +255,7 @@ periodics:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
         export DESTROY_CLUSTER=false; export OSD_ENV=prod; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=4.2.0-0.nightly; ./ci/prow_run_tests.sh
+        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=fast-4.2; ./ci/prow_run_tests.sh
         /usr/local/osde2e-secrets;
       command:
       - /bin/bash
@@ -393,7 +393,7 @@ periodics:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
         export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=4.2.0-0.nightly; ./ci/prow_run_tests.sh
+        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=fast-4.2; ./ci/prow_run_tests.sh
         /usr/local/osde2e-secrets;
       command:
       - /bin/bash
