--- a/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.1.yaml
+++ b/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-master__4.1.yaml
@@ -1,24 +1,20 @@
 tag_specification:
-  name: '4.3'
+  name: '4.1'
   namespace: ocp
 promotion:
   namespace: openshift
   name: openshift-serverless-nightly
 base_images:
   base:
-    name: '4.3'
+    name: '4.1'
     namespace: ocp
     tag: base
 build_root:
   project_image:
     dockerfile_path: openshift/ci-operator/build-image/Dockerfile
 tests:
-- as: e2e-aws-ocp-43
-  commands: "make test-e2e"
-  openshift_installer_src:
-    cluster_profile: aws
-- as: upgrade-tests-aws-ocp-43
-  commands: "make test-upgrade"
+- as: upgrade-tests-aws-ocp-41
+  commands: "OLM_NAMESPACE=openshift-operator-lifecycle-manager make test-upgrade"
   openshift_installer_src:
     cluster_profile: aws
 resources:
