feat: add vendor/check test to intly operator

--- a/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
+++ b/ci-operator/config/integr8ly/integreatly-operator/integr8ly-integreatly-operator-master.yaml
@@ -45,6 +45,10 @@ tag_specification:
   namespace: ocp
 
 tests:
+- as: vendor
+  commands: make vendor/check
+  container:
+    from: src
 - as: unit
   commands: make test/unit
   container:
