--- a/ci-operator/config/integr8ly/cloud-resource-operator/integr8ly-cloud-resource-operator-master.yaml
+++ b/ci-operator/config/integr8ly/cloud-resource-operator/integr8ly-cloud-resource-operator-master.yaml
@@ -39,6 +39,14 @@ tag_specification:
   namespace: ocp
 
 tests:
+- as: vendor
+  commands: unset GOFLAGS && make vendor/check
+  container:
+    from: src
+- as: unit
+  commands: unset GOFLAGS && make test/unit
+  container:
+    from: src
 - as: format
   commands: unset GOFLAGS && make code/check
   container:
