move to use the existing config

--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-presubmits.yaml
@@ -22,7 +22,7 @@ presubmits:
         - --org=openshift
         - --repo=hypershift-toolkit
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --secret-dir=/etc/ibm-gate-test-secrets/
+        - --secret-dir=
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=create-cluster
         command:
@@ -31,8 +31,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-hypershift-toolkit-release-iks-4.3.yaml
-              name: ci-operator-misc-configs
+              key: openshift-hypershift-toolkit-release-4.3.yaml
+              name: ci-operator-4.3-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -40,7 +40,7 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
-        - mountPath: /etc/ibm-gate-test-secrets
+        - mountPath: ""
           name: ibm-gate-test-secrets
           readOnly: true
         - mountPath: /etc/sentry-dsn
