update config for secret

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -35,10 +35,10 @@ tests:
   container:
     from: src
 - as: create-cluster
-  commands: ./deploy_ci.sh
+  commands: sleep 1321123 && ./deploy_ci.sh
   container:
     from: iks
   secret:
     name: 'ibm-gate-test-secrets'
-    mount_path: ''
+    mount_path: '/usr/test-secrets/'
 
