remove debug sleep from test

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -35,7 +35,7 @@ tests:
   container:
     from: src
 - as: create-cluster
-  commands: sleep 1321123 && ./deploy_ci.sh
+  commands:  ./deploy_ci.sh
   container:
     from: iks
   secret:
