ci-operator/config: use new libvirt image
Now that we have a generic libvirt image (for both the nested and remote
use cases), use that for the libvirt tests instead.

--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -25,7 +25,7 @@ images:
       - builder
       paths: null
   to: installer-artifacts
-- dockerfile_path: images/nested-libvirt/Dockerfile
+- dockerfile_path: images/libvirt/Dockerfile.ci
   from: base
   inputs:
     root:
