*: rename libvirt image
The nested-libvirt image was unfortunately originally named just
"libvirt". Now that we have a generic libvirt image, the nested-libvirt
image needs to be named appropriately. The plan is to eventually migrate
entirely off of the original nested-libvirt image.

--- a/ci-operator/config/openshift/installer/openshift-installer-fcos.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-fcos.yaml
@@ -32,7 +32,7 @@ images:
       as:
       - builder
       paths: null
-  to: libvirt-installer
+  to: nested-libvirt-installer
 - dockerfile_path: images/installer/Dockerfile.upi.ci
   from: base
   inputs:
