--- a/ci-operator/config/openshift/installer/openshift-installer-release-4.1.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-release-4.1.yaml
@@ -33,7 +33,7 @@ images:
       - builder
       paths: null
   optional: true
-  to: libvirt-installer
+  to: nested-libvirt-installer
 - dockerfile_path: images/installer/Dockerfile.upi.ci
   from: base
   inputs:
