--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
@@ -8,7 +8,7 @@ parameters:
   required: true
 - name: NAMESPACE
   required: true
-- name: IMAGE_LIBVIRT_INSTALLER
+- name: IMAGE_NESTED_LIBVIRT_INSTALLER
   required: true
 - name: IMAGE_TESTS
   required: true
@@ -88,7 +88,7 @@ objects:
 
     # Once the cluster is up, executes shared tests
     - name: test
-      image: ${IMAGE_LIBVIRT_INSTALLER}
+      image: ${IMAGE_NESTED_LIBVIRT_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       resources:
         requests:
@@ -156,7 +156,7 @@ objects:
 
     # Runs an install
     - name: setup
-      image: ${IMAGE_LIBVIRT_INSTALLER}
+      image: ${IMAGE_NESTED_LIBVIRT_INSTALLER}
       volumeMounts:
       - name: shared-tmp
         mountPath: /home/packer
@@ -250,7 +250,7 @@ objects:
 
    # Performs cleanup of all created resources and upload the artifacts
     - name: teardown
-      image: ${IMAGE_LIBVIRT_INSTALLER}
+      image: ${IMAGE_NESTED_LIBVIRT_INSTALLER}
       volumeMounts:
       - name: shared-tmp
         mountPath: /home/packer
