--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -32,7 +32,7 @@ images:
       as:
       - builder
       paths: null
-  to: libvirt-installer
+  to: nested-libvirt-installer
 - dockerfile_path: images/installer/Dockerfile.upi.ci
   from: base
   inputs:
