--- a/core-services/release-controller/_releases/release-ocp-4.5-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.5-ci.json
@@ -21,7 +21,7 @@
           "baremetal-installer",
           "openstack-installer",
           "upi-installer",
-          "libvirt-installer",
+          "nested-libvirt-installer",
           "baremetal-machine-controllers",
           "baremetal-operator",
           "baremetal-runtimecfg",
