move most envs to k8s env vars

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -13,11 +13,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: int
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -47,12 +55,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=4.2.0-0.nightly; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: int
+      - name: UPGRADE_RELEASE_STREAM
+        value: 4.2.0-0.nightly
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -82,12 +99,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=4.3.0-0.nightly; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: int
+      - name: UPGRADE_RELEASE_STREAM
+        value: 4.3.0-0.nightly
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -117,11 +143,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=3; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "3"
+      - name: OSD_ENV
+        value: int
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -151,12 +185,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=3; export UPGRADE_RELEASE_STREAM=4.3.0-0.nightly; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "3"
+      - name: OSD_ENV
+        value: int
+      - name: UPGRADE_RELEASE_STREAM
+        value: 4.3.0-0.nightly
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -186,11 +229,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=int; export MAJOR_TARGET=4; export
-        MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: int
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -220,11 +271,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=prod; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -254,12 +313,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=prod; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=fast-4.2; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
+      - name: UPGRADE_RELEASE_STREAM
+        value: fast-4.2
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -289,12 +357,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=prod; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=candidate-4.3; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
+      - name: UPGRADE_RELEASE_STREAM
+        value: candidate-4.3
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -324,11 +401,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=prod; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -358,11 +443,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -392,12 +485,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=fast-4.2; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
+      - name: UPGRADE_RELEASE_STREAM
+        value: fast-4.2
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -427,12 +529,21 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; export UPGRADE_RELEASE_STREAM=candidate-4.3; ./ci/prow_run_tests.sh
-        /usr/local/osde2e-secrets;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
+      - name: UPGRADE_RELEASE_STREAM
+        value: candidate-4.3
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -467,6 +578,15 @@ periodics:
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "3"
+      - name: OSD_ENV
+        value: stage
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
@@ -496,11 +616,19 @@ periodics:
     containers:
     - args:
       - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
-        export DESTROY_CLUSTER=false; export OSD_ENV=stage; export MAJOR_TARGET=4;
-        export MINOR_TARGET=2; ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets scale;
       command:
       - /bin/bash
       - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
       imagePullPolicy: Always
       name: ""
