make jobs update

--- a/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-presubmits.yaml
+++ b/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-presubmits.yaml
@@ -17,7 +17,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=cloud-bulldozer
+        - --repo=plow
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
         command:
