--- a/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-periodics.yaml
+++ b/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-periodics.yaml
@@ -16,7 +16,12 @@ periodics:
     containers:
     - args:
       - --artifact-dir=$(ARTIFACTS)
+      - --branch=master
       - --give-pr-author-access-to-namespace=true
+      - --lease-server=http://boskos
+      - --org=cloud-bulldozer
+      - --repo=plow
+      - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
       - --secret-dir=/usr/local/azure-perf-test-cluster-profile
       - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
       - --target=azure-perf-test
