--- a/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-presubmits.yaml
+++ b/ci-operator/jobs/cloud-bulldozer/plow/cloud-bulldozer-plow-master-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   cloud-bulldozer/plow:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/images
