--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -860,6 +860,16 @@ config_updater:
         - ""
       name: org-config
 external_plugins:
+  cloud-bulldozer/plow:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   codeready-toolchain/api:
   - endpoint: http://refresh
     events:
@@ -1276,6 +1286,21 @@ owners:
   - approved
   - lgtm
 plugins:
+  cloud-bulldozer/plow:
+  - blunderbuss
+  - blockade
+  - golint
+  - help
+  - hold
+  - label
+  - lgtm
+  - override
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - wip
+  - approve
   codeready-toolchain/api:
   - assign
   - blunderbuss
