--- a/ci-operator/jobs/cri-o/cri-o/cri-o-cri-o-master-presubmits.yaml
+++ b/ci-operator/jobs/cri-o/cri-o/cri-o-cri-o-master-presubmits.yaml
@@ -42,6 +42,14 @@ presubmits:
     trigger: ((?m)^/test( rhel| critest| critest_rhel),?(\s+|$))
   - agent: jenkins
     always_run: true
+    context: ci/openshift-jenkins/e2e_crun
+    labels:
+      master: ci.openshift.redhat.com
+    name: test_pull_request_crio_e2e_crun_fedora
+    rerun_command: /test e2e_crun
+    trigger: ((?m)^/test( crun| e2e| e2e_crun),?(\s+|$))
+  - agent: jenkins
+    always_run: true
     context: ci/openshift-jenkins/e2e_features_fedora
     labels:
       master: ci.openshift.redhat.com
@@ -72,6 +80,14 @@ presubmits:
     name: test_pull_request_crio_e2e_rhel
     rerun_command: /test e2e_rhel
     trigger: ((?m)^/test( rhel| e2e| e2e_rhel),?(\s+|$))
+  - agent: jenkins
+    always_run: true
+    context: ci/openshift-jenkins/integration_crun
+    labels:
+      master: ci.openshift.redhat.com
+    name: test_pull_request_crio_integration_crun_fedora
+    rerun_command: /test integration_crun
+    trigger: ((?m)^/test( crun| integration| integration_crun),?(\s+|$))
   - agent: jenkins
     always_run: true
     context: ci/openshift-jenkins/integration_fedora
