ci-tools: base private-org-sync on centos:8
The centos:8 images are made available by https://github.com/openshift/release/blob/master/core-services/base-ci-images/images-origin.yaml

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -15,6 +15,10 @@ base_images:
     name: "4.2"
     namespace: ocp
     tag: cli
+  centos8:
+    name: centos
+    namespace: origin
+    tag: '8'
 binary_build_commands: make install
 images:
 - context_dir: images/blocking-issue-creator/
@@ -204,7 +208,7 @@ images:
         source_path: /go/bin/group-auto-updater
   to: group-auto-updater
 - context_dir: images/private-org-sync/
-  from: git
+  from: centos8
   inputs:
     bin:
       paths:
