clean up install log output

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -442,7 +442,7 @@ objects:
             exit 1
         fi
 
-        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster &
+        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster 2>&1 | grep -v password &
         wait "$!"
 
         echo "##################### start cluster metadata.json ##########################"
