--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -486,7 +486,7 @@ objects:
         update_image_registry &
 
         echo "Completing UPI setup"
-        openshift-install --dir=/tmp/artifacts/installer wait-for install-complete &
+        openshift-install --dir=/tmp/artifacts/installer wait-for install-complete 2>&1 | grep -v password &
         wait "$!"
 
     # Performs cleanup of all created resources
