--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -419,7 +419,7 @@ objects:
 
         # What we're doing here is we generate manifests first and force that OpenShift SDN is configured.
         TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create manifests --log-level=debug
-        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug &
+        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug 2>&1 | grep -v password &
         wait "$!"
         install_exit_status=$?
         export KUBECONFIG=/tmp/artifacts/installer/auth/kubeconfig
