--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1817,7 +1817,7 @@ objects:
         fi
 
         echo "Completing UPI setup"
-        openshift-install --dir=/tmp/artifacts/installer wait-for install-complete &
+        openshift-install --dir=/tmp/artifacts/installer wait-for install-complete 2>&1 | grep -v password &
         wait "$!"
         touch /tmp/install-complete
 
