--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml
@@ -380,7 +380,7 @@ objects:
           echo "Forcing OpenShiftSDN by modifying manifests"
           sed -i -e 's/networkType: .*$/networkType: OpenShiftSDN/g' /tmp/artifacts/installer/manifests/cluster-network-02-config.yml
         fi
-        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug &
+        TF_LOG=debug openshift-install --dir=/tmp/artifacts/installer create cluster --log-level=debug 2>&1 | grep -v password &
         wait "$!"
 
         INGRESS_PORT=$(openstack port list --format value -c Name | awk "/${CLUSTER_NAME}.*-ingress-port/ {print}")
